fixed alignment of config fields

--- a/src/hyprfire/hyprfire_app/static/hyprfire_app/page-style.css
+++ b/src/hyprfire/hyprfire_app/static/hyprfire_app/page-style.css
@@ -40,6 +40,11 @@
   padding-bottom: 20px;
 }
 
+#id_filenames {
+  margin-bottom: 10px;
+  margin-left: 30px;
+}
+
 #id_window {
     margin-bottom: 10px;
     margin-left: 20px;
@@ -50,6 +55,7 @@
     margin-left: 35px;
 }
 
-#id_length {
-  display: block;
+#id_analysis {
+  margin-bottom: 10px;
+  margin-left: 50px;
 }
